# AUTO

./: LICENSE  README.md
cv_bridge/: CMakeLists.txt
offb/: CMakeLists.txt  package.xml
offb/msg/: obj.msg
offb/src/: camera.cpp  gps.cpp  record.cpp  track.cpp  traj.cpp
offb/src/include/: movement.cpp  movement.h  run_yolo.cpp  run_yolo.h
offb/src/include/yolo/: gt.txt  obj.names  yt320.cfg  yt416.cfg  yt512.cfg  yt608.cfg
